# object_fit_images

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
